--- a/src/edurepo/resources/templates/resources/resource.html
+++ b/src/edurepo/resources/templates/resources/resource.html
@@ -14,6 +14,7 @@
         <tr><td>Notes: {{ resource.notes }}</td></tr>
         {% endif %}
         <tr><td>Votes in favor: {{ resource.votes }}</td></tr>
+        <tr><td>Flagged as inappropriate {{ resource.inappropriate_flags }} times</td></tr>
     </table>
 
     <div class="ui-warning">
